removing all jvm args that are not needed